--- a/backend.html
+++ b/backend.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="content sau">
+<section class="content ini">
     <h2 class="title">Backend</h2>
+    <p>
+        Backend es la capa de acceso de datos de uun software que no es directamente accesible por los usuarios.
+        En esta actividad, creamos un entorno virtual para poder hacer un codigo para la pagina web que hicimos anteriormente.
+    </p>
     <a href="https://github.com/Dianalvb/pag_web_be" target="_blank" class="btn">Ver</a>
     <div class="box-container">
         </div>
 </section>
+
+<header class="content ini">
+    
+
+    <div class="btn-home">
+        
+    </div>
 </body>
