--- a/entre.html
+++ b/entre.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="content sau">
+    <section class="content inia">
         <h2 class="title">Entrevistas</h2>
         <p>En esta actividad tomamos una entrevista a desarrolladores. 
             Se tocaron temas como los lenguajes de programación más usados, 
@@ -15,4 +15,11 @@
             <a href="https://www.canva.com/design/DAFtIRhlsZQ/IzQfWJ6-DUbNzIgDtkSQXg/edit?utm_content=DAFtIRhlsZQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">Ver</a>
     </section>
 
+    <header class="content inia">
+    
+
+        <div class="btn-home">
+            
+        </div>
+    </body>
 </body>
