--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="content header">
         <h2 class="title">Portafolio</h2>
         <p>
-            Esta es mi pagina web :3
+            Este es el prtafolio de todos los trabajos que hemos hecho a lo largo del semestre.
         </p>
 
         <div class="btn-home">
