--- a/mobil.html
+++ b/mobil.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="content sau">
+    <section class="content inif">
         <h2 class="title">Desarrollo mobil.</h2>
+        <p>En clase vimos tres tipos de aplicaciónes moviles, las nativas, que se desarrollan en plataformas 
+            especificas con lenguajes especificos, las PWA que son construidas con html5, javascript y css. 
+            Se tiene la misma experiencia que con una app nativa. Finalmente existen las hibridas, estas son 
+            capaces de ejecutarse en cualquier plataforma. </p>
             <a href="https://app.flutterflow.io/share/sample-4q2omu" target="_blank" class="btn">Ver</a>
     </section>
-
+    <section class="content inif">
+    </section>
 </body>
