--- a/pagweb.html
+++ b/pagweb.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="content sau">
+    <section class="content inie">
         <h2 class="title">Pagina web</h2>
+        <p>Mi pagina web</p>
             <a href="https://dianalvb.github.io/mac-gris/" target="_blank" class="btn">Ver</a>
+    </section>
+    <section class="content inie">
     </section>
 </body>
