--- a/tecnologias.html
+++ b/tecnologias.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="content sau">
+    <section class="content inid">
         <h2 class="title">Tecnologías</h2>
         <p>Investigamos sobre los lenguajes, frameworks y bibliotecas que utilizan las principales aplicaciones que usamos, su año y país de origen.</p>
             <a href="https://www.canva.com/design/DAFwGTITs5Q/s8tOgoec0mh2rjWGTCZuUA/edit?utm_content=DAFwGTITs5Q&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">Ver</a>
+    </section>
+    <section class="content inid">
     </section>
 </body>
