--- a/tmi.html
+++ b/tmi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awsome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <section class="content sau"> 
+    <section class="content inic"> 
         <h2 class="title">Teachable Machine Image Model</h2>
     </head>
     <body>
@@ -78,6 +78,9 @@
     </body>
     </html>
     </section>
+    <section class="content inic">
+    </section>
+    
 
 </div>
     
